--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="icon" href="/logo.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Santiago Sepúlveda Dev.</title>
+    <title>Brian Valiente Rodenas</title>
   </head>
   <body>
     <div id="root"></div>
